--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
               <a class="text-nav"href="https://www.decosun.com.ua/images/stories/produkcia/nalichie_t/nalichie_tkani_tk_roll.xls">Залишок ролети</a>
               <a class="text-nav" href="https://decosun.com.ua/images/stories/produkcia/nalichie_t/nalichie_tkani.xls">Залишок жалюзі</a>
               <a class="text-nav" href="@">Калькулятор</a>
-              <a class="text-nav" href="/doc/nalichie_tkani_tk_roll (6) (1).html" target="meni">Готова таблиця залишку</a>
+              <a class="text-nav" href="/" target="meni">Готова таблиця залишку</a>
       
         </div>
         <div class="header-calk">
