--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 </LinearLayout>
     <title>Document</title>
-    <link rel="stylesheet" href="/CSS/style.css" />
+    <link rel="stylesheet" href="perfect/css/style.css" />
   </head>
   <body>
     <!-- Шапка----------------------------------------------------------------------->
