--- a/index.html
+++ b/index.html
@@ -17,9 +17,65 @@
 
 </LinearLayout>
     <title>Document</title>
-    <link rel="stylesheet" href="/css/style.css" />
+    
   </head>
   <body>
+    <style>
+    body {
+    background-color:slategray;
+}
+div {
+    margin: 10px;
+    font-size: 20px;
+    height: 150px;
+}
+/*///////////////////header///////////////////////*/
+#header {
+    background-image: url(/img/tema.png);
+    border: 2px solid black;
+}
+.header-line {
+    display: flex;
+    align-items: center;
+    justify-content: space-around; 
+    padding-top: 115px;
+}
+.header-logo {
+
+}
+.header-nav {
+}
+.text-nav {
+    text-decoration: none;
+    margin-right: 50px;
+    font-weight: 700;
+
+   color: #fff;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+.text-nav:hover {
+    color:dimgray;
+}
+
+.header-calk {
+
+}
+/*//////////////////////main/////////////////////////*/
+#main {
+    background-color: aliceblue;
+    height: 2000px;
+}
+/*/////////////////////futer/////////////////////////////////*/
+#footer {
+    background-color:cadetblue;
+}
+Footer
+© 2022 GitHub, Inc.
+Footer navigation
+Terms
+Privacy
+      <style/>
+
     <!-- Шапка----------------------------------------------------------------------->
     <div id="header">
       <div class="header-line">
