--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ Footer
 Footer navigation
 Terms
 Privacy
-      <style/>
+      </style>
 
     <!-- Шапка----------------------------------------------------------------------->
     <div id="header">
